syntax = "proto3";

package product;

import "media.proto";
import "attribute.proto";
import "tag.proto";
import "category.proto";
import "commons.proto";

message Variation {
  Attribute attribute = 1;
  repeated AttributeValue values = 2;
}

message VariationOption {
  uint32 id = 1;
  string title = 2;
  repeated Image thumbnail = 3;
  repeated uint32 options = 4;
  Price price = 5;
  uint32 quantity = 6;
  string sku = 7;
}

message Unit {
  string unit = 1;
}

message ProductShippingInfo {
  uint32 id = 1;
  uint32 weight = 2;
  Unit weightUnit = 3;
  uint32 volume = 4;
  Unit volumeUnit = 5;
  uint32 dimensionWidth = 6;
  uint32 dimensionHeight = 7;
  uint32 dimensionLenght = 8;
  Unit dimensionUnit = 9;
}

message ProductSeo {
  uint32 id = 1;
  string slug = 2;
  string metaTitle = 3;
  string metaKeywords = 4;
  string metaDescription = 5;
  repeated Image metaImage = 6;
}

message FinalPrice {
  Currency currency = 1;
  double value = 2;
}

message Price {
  FinalPrice finalPrice = 1;
  FinalPrice finalPriceExclTax = 2;
  Discount discount = 3;
}

message PriceRange {
  Price maximumPrice = 1;
  Price minimumPrice = 2;
}

message Discount {
  double amountOff = 1;
  double percentOff = 2;
}

message Product {
    uint32 id = 1;
    string name = 2;
    string sku = 3;
    string slug = 4;
    string type = 5;
    string description = 6;
    repeated Image thumbnail = 7;
    repeated Image gallery = 8;
    bool inStock = 9;
    PriceRange priceRange = 10;
    uint32 quantity = 11;
    bool disableOutOfStock = 12;
    repeated Variation variations = 13;
    repeated VariationOption variationOptions = 14;
    ProductShippingInfo productShippingInfo = 15;
    repeated Category categories = 16;
    repeated Tag tags = 17;
    ProductSeo productSeo = 18;
    repeated Product relatedProducts = 19 [lazy = true];
    repeated Product upsellProducts = 20 [lazy = true];
    repeated Product crossSellProducts = 21 [lazy = true];
    Price price = 22;
    uint32 ratingSummary = 23;
    uint32 reviewCount = 24;
}

message PopularProductsRequest {
  required string alias = 1;
  required uint32 storeLanguageId = 2;
  optional string storeId = 3;
}

message ProductsResponse {
  repeated Product products = 1;
}

message CategoryProductsRequest {
  required string alias = 1;
  required uint32 storeLanguageId = 2;
  optional string storeId = 3;
  required string urlKey = 4;
  required uint32 page = 5;
}

message ProductRequest {
  required string alias = 1;
  required uint32 storeLanguageId = 2;
  optional string storeId = 3;
  required string slug = 4;
}

message ProductResponse {
  Product product = 1;
}